--- a/manager/src/main/res/drawable/ic_server_start_24dp.xml
+++ b/manager/src/main/res/drawable/ic_server_start_24dp.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="?android:textColorSecondary"
+        android:fillColor="?appColorPrimary"
         android:pathData="M8,5v14l11,-7z"/>
 </vector>
