--- a/manager/src/main/res/layout/appbar_fragment_activity.xml
+++ b/manager/src/main/res/layout/appbar_fragment_activity.xml
@@ -6,8 +6,13 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
     app:consumeSystemWindowsInsets="start|end"
-    app:fitSystemWindowsInsets="start|end"
-    app:edgeToEdge="true">
+    app:edgeToEdge="true"
+    app:fitSystemWindowsInsets="start|end">
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <include layout="@layout/appbar" />
 
