--- a/manager/src/main/res/values/styles.xml
+++ b/manager/src/main/res/values/styles.xml
@@ -2,15 +2,13 @@
 <resources>
     <style name="AppTheme" parent="Theme.Light"/>
 
-    <style name="AppTheme.NoActionBar" parent="AppTheme">
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="AppTheme.RaiseOnlyAppBar">
+        <item name="appBarStyle">@style/Widget.AppBar.Solid.RaiseOnly</item>
     </style>
 
-    <style name="AppTheme.Apps" parent="AppTheme">
-        <item name="android:windowBackground">?android:colorBackground</item>
+    <style name="Widget.AppBar.Solid.RaiseOnly">
+        <item name="android:elevation">0dp</item>
+        <item name="android:stateListAnimator">@animator/raise_animator</item>
     </style>
 
     <style name="Card">
@@ -18,8 +16,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">4dp</item>
         <item name="android:layout_marginTop">4dp</item>
-        <item name="android:layout_marginStart">8dp</item>
-        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginStart">4dp</item>
+        <item name="android:layout_marginEnd">4dp</item>
         <item name="android:foreground">@drawable/material_button_outline_foreground</item>
         <item name="android:background">@drawable/material_button_outline_background_dark</item>
         <item name="android:paddingStart">16dp</item>
@@ -57,7 +55,7 @@
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="GrantPermissions" parent="@style/AppTheme.NoActionBar">
+    <style name="GrantPermissions" parent="@style/AppTheme">
         <item name="android:colorBackground">?colorBackgroundFloating</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
 
