fix dark theme - follow system

--- a/manager/src/main/res/values/arrays.xml
+++ b/manager/src/main/res/values/arrays.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string-array name="night_mode" tools:ignore="InconsistentArrays">
+
+    <string-array name="night_mode">
         <item>@string/dark_theme_off</item>
         <item>@string/dark_theme_on</item>
         <item>@string/dark_theme_auto_time</item>
+        <item>@string/follow_system</item>
     </string-array>
 
-    <integer-array name="night_mode_value" tools:ignore="InconsistentArrays">
+    <integer-array name="night_mode_value">
         <item>1</item>
         <item>2</item>
         <item>0</item>
+        <item>-1</item>
     </integer-array>
 
     <string-array name="language" translatable="false">
