remove unused resources

--- a/manager/src/main/res/values-v21/themes_override.xml
+++ b/manager/src/main/res/values-v21/themes_override.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PrivateResource">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PrivateResource,UnusedResources">
 
     <!-- Add android:colorControlNormal -->
     <style name="Base.ThemeOverlay.AppCompat.ActionBar" tools:override="true">
