--- a/manager/src/main/res/layout/preference_recyclerview.xml
+++ b/manager/src/main/res/layout/preference_recyclerview.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rikka.material.widget.BorderRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="UnusedResources"
     android:id="@android:id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
