--- a/manager/src/main/res/layout/appbar.xml
+++ b/manager/src/main/res/layout/appbar.xml
@@ -6,7 +6,8 @@
     style="?appBarStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:viewBindingIgnore="true">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
