--- a/manager/src/main/res/layout/appbar_fragment_activity.xml
+++ b/manager/src/main/res/layout/appbar_fragment_activity.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
     app:consumeSystemWindowsInsets="start|end"
     app:edgeToEdge="true"
-    app:fitSystemWindowsInsets="start|end">
+    app:fitSystemWindowsInsets="start|end"
+    tools:viewBindingIgnore="true">
 
     <FrameLayout
         android:id="@+id/fragment_container"
