--- a/manager/src/main/res/layout/home_start_adb.xml
+++ b/manager/src/main/res/layout/home_start_adb.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
-            app:htmlText="@string/start_service_title_adb" />
+            app:htmlText="@string/home_adb_title" />
 
         <moe.shizuku.manager.widget.CheckedImageView
             android:id="@android:id/text2"
@@ -63,7 +63,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             app:htmlFlags="trim_whitespace"
-            app:htmlText="@string/start_service_summary_adb" />
+            app:htmlText="@string/home_adb_description" />
 
     </moe.shizuku.manager.widget.ExpandableLayout>
 
@@ -71,12 +71,12 @@
         android:id="@android:id/button1"
         style="@style/CardButton"
         android:drawableStart="@drawable/ic_help_outline_24dp"
-        android:text="@string/view_online_help" />
+        android:text="@string/home_adb_button_view_help" />
 
     <TextView
         android:id="@android:id/button2"
         style="@style/CardButton"
         android:drawableStart="@drawable/ic_code_24dp"
-        android:text="@string/view_command" />
+        android:text="@string/home_adb_button_view_command" />
 
 </LinearLayout>
