--- a/manager/src/main/res/values/strings_untranslatable.xml
+++ b/manager/src/main/res/values/strings_untranslatable.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="icon_illustrator" translatable="false">小雅</string>
     <string name="icon_illustrator_url" translatable="false">https://twitter.com/xiaoya_er</string>
+
+    <string name="translation_url" translatable="false">http://rikka.app/contribute_translation.html</string>
 </resources>
