--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -1,60 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    android:clipChildren="false"
-    android:clipToPadding="false">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@android:id/text2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@android:id/text1"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp" />
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp" />
+        <TextView
+            android:id="@android:id/text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@android:id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="?android:borderlessButtonStyle"
-        android:textColor="?android:colorAccent"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="-12dp"
-        android:textAllCaps="false"
-        android:text="IUserManager#getUsers"/>
+        <Button
+            android:id="@android:id/button1"
+            style="?android:borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-12dp"
+            android:layout_marginTop="8dp"
+            android:text="IUserManager#getUsers"
+            android:textAllCaps="false"
+            android:textColor="?android:colorAccent" />
 
-    <Button
-        android:id="@android:id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="?android:borderlessButtonStyle"
-        android:textColor="?android:colorAccent"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="-12dp"
-        android:textAllCaps="false"
-        android:text="Install apk(s)"/>
+        <Button
+            android:id="@android:id/button2"
+            style="?android:borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-12dp"
+            android:layout_marginTop="4dp"
+            android:text="Install apk(s)"
+            android:textAllCaps="false"
+            android:textColor="?android:colorAccent" />
 
-    <Button
-        android:id="@android:id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="?android:borderlessButtonStyle"
-        android:textColor="?android:colorAccent"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="-12dp"
-        android:textAllCaps="false"
-        android:text="Abandon all my sessions"/>
+        <Button
+            android:id="@android:id/button3"
+            style="?android:borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-12dp"
+            android:layout_marginTop="4dp"
+            android:text="Abandon all my sessions"
+            android:textAllCaps="false"
+            android:textColor="?android:colorAccent" />
 
-</LinearLayout>
+        <TextView
+            android:id="@android:id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/text3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp" />
+
+    </LinearLayout>
+
+</ScrollView>
