--- a/manager/src/main/res/layout/home_start_adb.xml
+++ b/manager/src/main/res/layout/home_start_adb.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="?homeCardStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -26,13 +27,13 @@
             android:src="@drawable/ic_adb_24dp"
             app:iconColorName="teal" />
 
-        <rikka.html.widget.HtmlCompatTextView
+        <TextView
             style="@style/CardTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
-            app:htmlText="@string/home_adb_title" />
+            android:text="@string/home_adb_title" />
 
         <moe.shizuku.manager.widget.CheckedImageView
             android:id="@android:id/text2"
@@ -54,7 +55,7 @@
         android:layout_marginBottom="16dp"
         app:isExpanded="true">
 
-        <rikka.html.widget.HtmlCompatTextView
+        <TextView
             android:id="@android:id/text1"
             style="@style/CardSummary"
             android:layout_width="match_parent"
@@ -62,21 +63,20 @@
             android:layout_marginStart="80dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            app:htmlFlags="trim_whitespace"
-            app:htmlText="@string/home_adb_description" />
+            tools:htmlText="@string/home_adb_description" />
 
     </moe.shizuku.manager.widget.ExpandableLayout>
 
     <TextView
         android:id="@android:id/button1"
         style="@style/CardButton"
-        android:drawableStart="@drawable/ic_help_outline_24dp"
-        android:text="@string/home_adb_button_view_help" />
+        android:drawableStart="@drawable/ic_code_24dp"
+        android:text="@string/home_adb_button_view_command" />
 
     <TextView
         android:id="@android:id/button2"
         style="@style/CardButton"
-        android:drawableStart="@drawable/ic_code_24dp"
-        android:text="@string/home_adb_button_view_command" />
+        android:drawableStart="@drawable/ic_wadb_24"
+        android:text="@string/home_adb_button_wireless" />
 
 </LinearLayout>
