--- a/manager/src/main/res/layout/adb_pair_dialog.xml
+++ b/manager/src/main/res/layout/adb_pair_dialog.xml
@@ -30,6 +30,8 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLines="1"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-medium"
                 tools:text="123456" />
 
         </com.google.android.material.textfield.TextInputLayout>
