--- a/manager/src/main/res/layout/about_dialog.xml
+++ b/manager/src/main/res/layout/about_dialog.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:padding="24dp">
+    android:padding="?android:dialogPreferredPadding">
 
     <ImageView
         android:layout_width="40dp"
@@ -40,15 +39,6 @@
             android:textColor="?android:textColorSecondary"
             android:textSize="14sp"
             tools:text="@string/about_view_source_code" />
-
-        <TextView
-            android:id="@+id/icon_credits"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:textColor="?android:textColorSecondary"
-            android:textSize="14sp"
-            tools:text="@string/about_icon_credits" />
 
     </LinearLayout>
 
