--- a/manager/src/main/res/values/strings_untranslatable.xml
+++ b/manager/src/main/res/values/strings_untranslatable.xml
@@ -3,5 +3,6 @@
     <string name="icon_illustrator" translatable="false">小雅</string>
     <string name="icon_illustrator_url" translatable="false">https://twitter.com/xiaoya_er</string>
 
+    <string name="toast_translation_unfinished" translatable="false">The translation of current language is outdated.\nYou can learn how to contribute translation in settings.</string>
     <string name="translation_url" translatable="false">http://rikka.app/contribute_translation.html</string>
 </resources>
