--- a/manager/src/main/res/layout/about_dialog.xml
+++ b/manager/src/main/res/layout/about_dialog.xml
@@ -7,10 +7,11 @@
     android:padding="?android:dialogPreferredPadding">
 
     <ImageView
+        android:id="@android:id/icon"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:importantForAccessibility="no"
-        android:src="@drawable/ic_launcher" />
+        tools:src="@drawable/ic_launcher" />
 
     <LinearLayout
         android:layout_width="wrap_content"
